projects/CSimple/parser.output
State 7 conflicts: 1 shift/reduce
State 67 conflicts: 6 shift/reduce
State 80 conflicts: 1 shift/reduce
State 82 conflicts: 6 shift/reduce
State 87 conflicts: 6 shift/reduce
State 114 conflicts: 37 reduce/reduce
State 119 conflicts: 1 shift/reduce
State 122 conflicts: 1 shift/reduce
State 123 conflicts: 1 shift/reduce
State 124 conflicts: 1 shift/reduce
State 127 conflicts: 32 shift/reduce
State 128 conflicts: 32 shift/reduce


Grammar

    0 $accept: start $end

    1 start: header

    2 header: header PROCEDURE STRING '(' func_param ')' RETURN types '{' func_body '}'
    3       | PROCEDURE STRING '(' func_param ')' RETURN types '{' func_body '}'
    4       | PROCEDURE STRING '(' ')' RETURN types '{' func_body '}'
    5       | PROCEDURE STRING '(' func_param ')' RETURN types '{' func_body '}' header

    6 func_param: ε
    7           | list_func_param ':' types
    8           | func_param ';' list_func_param ':' types

    9 list_func_param: list_func_param ',' STRING
   10                | list_func_param ',' CHAR
   11                | STRING
   12                | CHAR

   13 func_body: expression
   14          | ε

   15 expression: types
   16           | PROCEDURE STRING '(' func_param ')' RETURN types '{' func_body '}'
   17           | keywords types
   18           | operator types
   19           | expression types
   20           | expression keywords types
   21           | expression keywords
   22           | expression operator types
   23           | expression operator paranthesis
   24           | expression operator '-'
   25           | expression specials
   26           | expression ':' types
   27           | expression ',' types
   28           | expression '|' types
   29           | expression paranthesis types
   30           | expression paranthesis operator
   31           | expression paranthesis keywords
   32           | expression paranthesis paranthesis
   33           | expression paranthesis '-'
   34           | expression ')' '{'
   35           | expression ']' ';'
   36           | expression ')' ';'
   37           | expression ';' types
   38           | expression ';'
   39           | keywords
   40           | paranthesis

   41 keywords: IF '(' expression ')' '{' expression '}'
   42         | IF '(' expression ')' '{' expression '}' ELSE '{' expression '}'
   43         | WHILE '(' expression ')' '{' expression '}'
   44         | VAR
   45         | RETURN
   46         | _NULL_

   47 types: STRING
   48      | INTEGER
   49      | BOOLEAN
   50      | CHAR
   51      | INTPTR
   52      | CHARPTR

   53 operator: AND
   54         | '/'
   55         | '='
   56         | EQUAL
   57         | '>'
   58         | EQUALMORE
   59         | '<'
   60         | EQUALLESS
   61         | '-'
   62         | '!'
   63         | DIFF
   64         | OR
   65         | '+'
   66         | '*'
   67         | '&'
   68         | '^'

   69 paranthesis: '('
   70            | '['
   71            | ')'
   72            | ']'
   73            | '{' expression '}'
   74            | '{' '}'

   75 specials: '=' '&'
   76         | '=' '^'
   77         | '=' _NULL_


Terminals, with rules where they appear

    $end (0) 0
    '!' (33) 62
    '&' (38) 67 75
    '(' (40) 2 3 4 5 16 41 42 43 69
    ')' (41) 2 3 4 5 16 34 36 41 42 43 71
    '*' (42) 66
    '+' (43) 65
    ',' (44) 9 10 27
    '-' (45) 24 33 61
    '/' (47) 54
    ':' (58) 7 8 26
    ';' (59) 8 35 36 37 38
    '<' (60) 59
    '=' (61) 55 75 76 77
    '>' (62) 57
    '[' (91) 70
    ']' (93) 35 72
    '^' (94) 68 76
    '{' (123) 2 3 4 5 16 34 41 42 43 73 74
    '|' (124) 28
    '}' (125) 2 3 4 5 16 41 42 43 73 74
    error (256)
    PROCEDURE (258) 2 3 4 5 16
    VAR (259) 44
    RETURN (260) 2 3 4 5 16 45
    IF (261) 41 42
    ELSE (262) 42
    WHILE (263) 43
    _NULL_ (264) 46 77
    INTPTR (265) 51
    CHARPTR (266) 52
    AND (267) 53
    EQUAL (268) 56
    EQUALMORE (269) 58
    EQUALLESS (270) 60
    DIFF (271) 63
    OR (272) 64
    BOOLEAN <bval> (273) 49
    INTEGER <ival> (274) 48
    CHAR <cval> (275) 10 12 50
    STRING <sval> (276) 2 3 4 5 9 11 16 47


Nonterminals, with rules where they appear

    $accept (42)
        on left: 0
    start (43)
        on left: 1
        on right: 0
    header (44)
        on left: 2 3 4 5
        on right: 1 2 5
    func_param (45)
        on left: 6 7 8
        on right: 2 3 5 8 16
    list_func_param (46)
        on left: 9 10 11 12
        on right: 7 8 9 10
    func_body (47)
        on left: 13 14
        on right: 2 3 4 5 16
    expression (48)
        on left: 15 16 17 18 19 20 21 22 23 24 25 26 27 28 29 30 31 32 33 34 35 36 37 38 39 40
        on right: 13 19 20 21 22 23 24 25 26 27 28 29 30 31 32 33 34 35 36 37 38 41 42 43 73
    keywords (49)
        on left: 41 42 43 44 45 46
        on right: 17 20 21 31 39
    types (50)
        on left: 47 48 49 50 51 52
        on right: 2 3 4 5 7 8 15 16 17 18 19 20 22 26 27 28 29 37
    operator (51)
        on left: 53 54 55 56 57 58 59 60 61 62 63 64 65 66 67 68
        on right: 18 22 23 24 30
    paranthesis (52)
        on left: 69 70 71 72 73 74
        on right: 23 29 30 31 32 33 40
    specials (53)
        on left: 75 76 77
        on right: 25


State 0

    0 $accept: • start $end

    PROCEDURE  shift, and go to state 1

    start   go to state 2
    header  go to state 3


State 1

    3 header: PROCEDURE • STRING '(' func_param ')' RETURN types '{' func_body '}'
    4       | PROCEDURE • STRING '(' ')' RETURN types '{' func_body '}'
    5       | PROCEDURE • STRING '(' func_param ')' RETURN types '{' func_body '}' header

    STRING  shift, and go to state 4


State 2

    0 $accept: start • $end

    $end  shift, and go to state 5


State 3

    1 start: header •
    2 header: header • PROCEDURE STRING '(' func_param ')' RETURN types '{' func_body '}'

    PROCEDURE  shift, and go to state 6

    $default  reduce using rule 1 (start)


State 4

    3 header: PROCEDURE STRING • '(' func_param ')' RETURN types '{' func_body '}'
    4       | PROCEDURE STRING • '(' ')' RETURN types '{' func_body '}'
    5       | PROCEDURE STRING • '(' func_param ')' RETURN types '{' func_body '}' header

    '('  shift, and go to state 7


State 5

    0 $accept: start $end •

    $default  accept


State 6

    2 header: header PROCEDURE • STRING '(' func_param ')' RETURN types '{' func_body '}'

    STRING  shift, and go to state 8


State 7

    3 header: PROCEDURE STRING '(' • func_param ')' RETURN types '{' func_body '}'
    4       | PROCEDURE STRING '(' • ')' RETURN types '{' func_body '}'
    5       | PROCEDURE STRING '(' • func_param ')' RETURN types '{' func_body '}' header

    CHAR    shift, and go to state 9
    STRING  shift, and go to state 10
    ')'     shift, and go to state 11

    ')'       [reduce using rule 6 (func_param)]
    $default  reduce using rule 6 (func_param)

    func_param       go to state 12
    list_func_param  go to state 13


State 8

    2 header: header PROCEDURE STRING • '(' func_param ')' RETURN types '{' func_body '}'

    '('  shift, and go to state 14


State 9

   12 list_func_param: CHAR •

    $default  reduce using rule 12 (list_func_param)


State 10

   11 list_func_param: STRING •

    $default  reduce using rule 11 (list_func_param)


State 11

    4 header: PROCEDURE STRING '(' ')' • RETURN types '{' func_body '}'

    RETURN  shift, and go to state 15


State 12

    3 header: PROCEDURE STRING '(' func_param • ')' RETURN types '{' func_body '}'
    5       | PROCEDURE STRING '(' func_param • ')' RETURN types '{' func_body '}' header
    8 func_param: func_param • ';' list_func_param ':' types

    ')'  shift, and go to state 16
    ';'  shift, and go to state 17


State 13

    7 func_param: list_func_param • ':' types
    9 list_func_param: list_func_param • ',' STRING
   10                | list_func_param • ',' CHAR

    ':'  shift, and go to state 18
    ','  shift, and go to state 19


State 14

    2 header: header PROCEDURE STRING '(' • func_param ')' RETURN types '{' func_body '}'

    CHAR    shift, and go to state 9
    STRING  shift, and go to state 10

    $default  reduce using rule 6 (func_param)

    func_param       go to state 20
    list_func_param  go to state 13


State 15

    4 header: PROCEDURE STRING '(' ')' RETURN • types '{' func_body '}'

    INTPTR   shift, and go to state 21
    CHARPTR  shift, and go to state 22
    BOOLEAN  shift, and go to state 23
    INTEGER  shift, and go to state 24
    CHAR     shift, and go to state 25
    STRING   shift, and go to state 26

    types  go to state 27


State 16

    3 header: PROCEDURE STRING '(' func_param ')' • RETURN types '{' func_body '}'
    5       | PROCEDURE STRING '(' func_param ')' • RETURN types '{' func_body '}' header

    RETURN  shift, and go to state 28


State 17

    8 func_param: func_param ';' • list_func_param ':' types

    CHAR    shift, and go to state 9
    STRING  shift, and go to state 10

    list_func_param  go to state 29


State 18

    7 func_param: list_func_param ':' • types

    INTPTR   shift, and go to state 21
    CHARPTR  shift, and go to state 22
    BOOLEAN  shift, and go to state 23
    INTEGER  shift, and go to state 24
    CHAR     shift, and go to state 25
    STRING   shift, and go to state 26

    types  go to state 30


State 19

    9 list_func_param: list_func_param ',' • STRING
   10                | list_func_param ',' • CHAR

    CHAR    shift, and go to state 31
    STRING  shift, and go to state 32


State 20

    2 header: header PROCEDURE STRING '(' func_param • ')' RETURN types '{' func_body '}'
    8 func_param: func_param • ';' list_func_param ':' types

    ')'  shift, and go to state 33
    ';'  shift, and go to state 17


State 21

   51 types: INTPTR •

    $default  reduce using rule 51 (types)


State 22

   52 types: CHARPTR •

    $default  reduce using rule 52 (types)


State 23

   49 types: BOOLEAN •

    $default  reduce using rule 49 (types)


State 24

   48 types: INTEGER •

    $default  reduce using rule 48 (types)


State 25

   50 types: CHAR •

    $default  reduce using rule 50 (types)


State 26

   47 types: STRING •

    $default  reduce using rule 47 (types)


State 27

    4 header: PROCEDURE STRING '(' ')' RETURN types • '{' func_body '}'

    '{'  shift, and go to state 34


State 28

    3 header: PROCEDURE STRING '(' func_param ')' RETURN • types '{' func_body '}'
    5       | PROCEDURE STRING '(' func_param ')' RETURN • types '{' func_body '}' header

    INTPTR   shift, and go to state 21
    CHARPTR  shift, and go to state 22
    BOOLEAN  shift, and go to state 23
    INTEGER  shift, and go to state 24
    CHAR     shift, and go to state 25
    STRING   shift, and go to state 26

    types  go to state 35


State 29

    8 func_param: func_param ';' list_func_param • ':' types
    9 list_func_param: list_func_param • ',' STRING
   10                | list_func_param • ',' CHAR

    ':'  shift, and go to state 36
    ','  shift, and go to state 19


State 30

    7 func_param: list_func_param ':' types •

    $default  reduce using rule 7 (func_param)


State 31

   10 list_func_param: list_func_param ',' CHAR •

    $default  reduce using rule 10 (list_func_param)


State 32

    9 list_func_param: list_func_param ',' STRING •

    $default  reduce using rule 9 (list_func_param)


State 33

    2 header: header PROCEDURE STRING '(' func_param ')' • RETURN types '{' func_body '}'

    RETURN  shift, and go to state 37


State 34

    4 header: PROCEDURE STRING '(' ')' RETURN types '{' • func_body '}'

    PROCEDURE  shift, and go to state 38
    VAR        shift, and go to state 39
    RETURN     shift, and go to state 40
    IF         shift, and go to state 41
    WHILE      shift, and go to state 42
    _NULL_     shift, and go to state 43
    INTPTR     shift, and go to state 21
    CHARPTR    shift, and go to state 22
    AND        shift, and go to state 44
    EQUAL      shift, and go to state 45
    EQUALMORE  shift, and go to state 46
    EQUALLESS  shift, and go to state 47
    DIFF       shift, and go to state 48
    OR         shift, and go to state 49
    BOOLEAN    shift, and go to state 23
    INTEGER    shift, and go to state 24
    CHAR       shift, and go to state 25
    STRING     shift, and go to state 26
    '('        shift, and go to state 50
    ')'        shift, and go to state 51
    '{'        shift, and go to state 52
    '-'        shift, and go to state 53
    ']'        shift, and go to state 54
    '/'        shift, and go to state 55
    '='        shift, and go to state 56
    '>'        shift, and go to state 57
    '<'        shift, and go to state 58
    '!'        shift, and go to state 59
    '+'        shift, and go to state 60
    '*'        shift, and go to state 61
    '&'        shift, and go to state 62
    '^'        shift, and go to state 63
    '['        shift, and go to state 64

    $default  reduce using rule 14 (func_body)

    func_body    go to state 65
    expression   go to state 66
    keywords     go to state 67
    types        go to state 68
    operator     go to state 69
    paranthesis  go to state 70


State 35

    3 header: PROCEDURE STRING '(' func_param ')' RETURN types • '{' func_body '}'
    5       | PROCEDURE STRING '(' func_param ')' RETURN types • '{' func_body '}' header

    '{'  shift, and go to state 71


State 36

    8 func_param: func_param ';' list_func_param ':' • types

    INTPTR   shift, and go to state 21
    CHARPTR  shift, and go to state 22
    BOOLEAN  shift, and go to state 23
    INTEGER  shift, and go to state 24
    CHAR     shift, and go to state 25
    STRING   shift, and go to state 26

    types  go to state 72


State 37

    2 header: header PROCEDURE STRING '(' func_param ')' RETURN • types '{' func_body '}'

    INTPTR   shift, and go to state 21
    CHARPTR  shift, and go to state 22
    BOOLEAN  shift, and go to state 23
    INTEGER  shift, and go to state 24
    CHAR     shift, and go to state 25
    STRING   shift, and go to state 26

    types  go to state 73


State 38

   16 expression: PROCEDURE • STRING '(' func_param ')' RETURN types '{' func_body '}'

    STRING  shift, and go to state 74


State 39

   44 keywords: VAR •

    $default  reduce using rule 44 (keywords)


State 40

   45 keywords: RETURN •

    $default  reduce using rule 45 (keywords)


State 41

   41 keywords: IF • '(' expression ')' '{' expression '}'
   42         | IF • '(' expression ')' '{' expression '}' ELSE '{' expression '}'

    '('  shift, and go to state 75


State 42

   43 keywords: WHILE • '(' expression ')' '{' expression '}'

    '('  shift, and go to state 76


State 43

   46 keywords: _NULL_ •

    $default  reduce using rule 46 (keywords)


State 44

   53 operator: AND •

    $default  reduce using rule 53 (operator)


State 45

   56 operator: EQUAL •

    $default  reduce using rule 56 (operator)


State 46

   58 operator: EQUALMORE •

    $default  reduce using rule 58 (operator)


State 47

   60 operator: EQUALLESS •

    $default  reduce using rule 60 (operator)


State 48

   63 operator: DIFF •

    $default  reduce using rule 63 (operator)


State 49

   64 operator: OR •

    $default  reduce using rule 64 (operator)


State 50

   69 paranthesis: '(' •

    $default  reduce using rule 69 (paranthesis)


State 51

   71 paranthesis: ')' •

    $default  reduce using rule 71 (paranthesis)


State 52

   73 paranthesis: '{' • expression '}'
   74            | '{' • '}'

    PROCEDURE  shift, and go to state 38
    VAR        shift, and go to state 39
    RETURN     shift, and go to state 40
    IF         shift, and go to state 41
    WHILE      shift, and go to state 42
    _NULL_     shift, and go to state 43
    INTPTR     shift, and go to state 21
    CHARPTR    shift, and go to state 22
    AND        shift, and go to state 44
    EQUAL      shift, and go to state 45
    EQUALMORE  shift, and go to state 46
    EQUALLESS  shift, and go to state 47
    DIFF       shift, and go to state 48
    OR         shift, and go to state 49
    BOOLEAN    shift, and go to state 23
    INTEGER    shift, and go to state 24
    CHAR       shift, and go to state 25
    STRING     shift, and go to state 26
    '('        shift, and go to state 50
    ')'        shift, and go to state 51
    '{'        shift, and go to state 52
    '}'        shift, and go to state 77
    '-'        shift, and go to state 53
    ']'        shift, and go to state 54
    '/'        shift, and go to state 55
    '='        shift, and go to state 56
    '>'        shift, and go to state 57
    '<'        shift, and go to state 58
    '!'        shift, and go to state 59
    '+'        shift, and go to state 60
    '*'        shift, and go to state 61
    '&'        shift, and go to state 62
    '^'        shift, and go to state 63
    '['        shift, and go to state 64

    expression   go to state 78
    keywords     go to state 67
    types        go to state 68
    operator     go to state 69
    paranthesis  go to state 70


State 53

   61 operator: '-' •

    $default  reduce using rule 61 (operator)


State 54

   72 paranthesis: ']' •

    $default  reduce using rule 72 (paranthesis)


State 55

   54 operator: '/' •

    $default  reduce using rule 54 (operator)


State 56

   55 operator: '=' •

    $default  reduce using rule 55 (operator)


State 57

   57 operator: '>' •

    $default  reduce using rule 57 (operator)


State 58

   59 operator: '<' •

    $default  reduce using rule 59 (operator)


State 59

   62 operator: '!' •

    $default  reduce using rule 62 (operator)


State 60

   65 operator: '+' •

    $default  reduce using rule 65 (operator)


State 61

   66 operator: '*' •

    $default  reduce using rule 66 (operator)


State 62

   67 operator: '&' •

    $default  reduce using rule 67 (operator)


State 63

   68 operator: '^' •

    $default  reduce using rule 68 (operator)


State 64

   70 paranthesis: '[' •

    $default  reduce using rule 70 (paranthesis)


State 65

    4 header: PROCEDURE STRING '(' ')' RETURN types '{' func_body • '}'

    '}'  shift, and go to state 79


State 66

   13 func_body: expression •
   19 expression: expression • types
   20           | expression • keywords types
   21           | expression • keywords
   22           | expression • operator types
   23           | expression • operator paranthesis
   24           | expression • operator '-'
   25           | expression • specials
   26           | expression • ':' types
   27           | expression • ',' types
   28           | expression • '|' types
   29           | expression • paranthesis types
   30           | expression • paranthesis operator
   31           | expression • paranthesis keywords
   32           | expression • paranthesis paranthesis
   33           | expression • paranthesis '-'
   34           | expression • ')' '{'
   35           | expression • ']' ';'
   36           | expression • ')' ';'
   37           | expression • ';' types
   38           | expression • ';'

    VAR        shift, and go to state 39
    RETURN     shift, and go to state 40
    IF         shift, and go to state 41
    WHILE      shift, and go to state 42
    _NULL_     shift, and go to state 43
    INTPTR     shift, and go to state 21
    CHARPTR    shift, and go to state 22
    AND        shift, and go to state 44
    EQUAL      shift, and go to state 45
    EQUALMORE  shift, and go to state 46
    EQUALLESS  shift, and go to state 47
    DIFF       shift, and go to state 48
    OR         shift, and go to state 49
    BOOLEAN    shift, and go to state 23
    INTEGER    shift, and go to state 24
    CHAR       shift, and go to state 25
    STRING     shift, and go to state 26
    '('        shift, and go to state 50
    ')'        shift, and go to state 80
    '{'        shift, and go to state 52
    ':'        shift, and go to state 81
    ';'        shift, and go to state 82
    ','        shift, and go to state 83
    '-'        shift, and go to state 53
    '|'        shift, and go to state 84
    ']'        shift, and go to state 85
    '/'        shift, and go to state 55
    '='        shift, and go to state 86
    '>'        shift, and go to state 57
    '<'        shift, and go to state 58
    '!'        shift, and go to state 59
    '+'        shift, and go to state 60
    '*'        shift, and go to state 61
    '&'        shift, and go to state 62
    '^'        shift, and go to state 63
    '['        shift, and go to state 64

    $default  reduce using rule 13 (func_body)

    keywords     go to state 87
    types        go to state 88
    operator     go to state 89
    paranthesis  go to state 90
    specials     go to state 91


State 67

   17 expression: keywords • types
   39           | keywords •

    INTPTR   shift, and go to state 21
    CHARPTR  shift, and go to state 22
    BOOLEAN  shift, and go to state 23
    INTEGER  shift, and go to state 24
    CHAR     shift, and go to state 25
    STRING   shift, and go to state 26

    INTPTR    [reduce using rule 39 (expression)]
    CHARPTR   [reduce using rule 39 (expression)]
    BOOLEAN   [reduce using rule 39 (expression)]
    INTEGER   [reduce using rule 39 (expression)]
    CHAR      [reduce using rule 39 (expression)]
    STRING    [reduce using rule 39 (expression)]
    $default  reduce using rule 39 (expression)

    types  go to state 92


State 68

   15 expression: types •

    $default  reduce using rule 15 (expression)


State 69

   18 expression: operator • types

    INTPTR   shift, and go to state 21
    CHARPTR  shift, and go to state 22
    BOOLEAN  shift, and go to state 23
    INTEGER  shift, and go to state 24
    CHAR     shift, and go to state 25
    STRING   shift, and go to state 26

    types  go to state 93


State 70

   40 expression: paranthesis •

    $default  reduce using rule 40 (expression)


State 71

    3 header: PROCEDURE STRING '(' func_param ')' RETURN types '{' • func_body '}'
    5       | PROCEDURE STRING '(' func_param ')' RETURN types '{' • func_body '}' header

    PROCEDURE  shift, and go to state 38
    VAR        shift, and go to state 39
    RETURN     shift, and go to state 40
    IF         shift, and go to state 41
    WHILE      shift, and go to state 42
    _NULL_     shift, and go to state 43
    INTPTR     shift, and go to state 21
    CHARPTR    shift, and go to state 22
    AND        shift, and go to state 44
    EQUAL      shift, and go to state 45
    EQUALMORE  shift, and go to state 46
    EQUALLESS  shift, and go to state 47
    DIFF       shift, and go to state 48
    OR         shift, and go to state 49
    BOOLEAN    shift, and go to state 23
    INTEGER    shift, and go to state 24
    CHAR       shift, and go to state 25
    STRING     shift, and go to state 26
    '('        shift, and go to state 50
    ')'        shift, and go to state 51
    '{'        shift, and go to state 52
    '-'        shift, and go to state 53
    ']'        shift, and go to state 54
    '/'        shift, and go to state 55
    '='        shift, and go to state 56
    '>'        shift, and go to state 57
    '<'        shift, and go to state 58
    '!'        shift, and go to state 59
    '+'        shift, and go to state 60
    '*'        shift, and go to state 61
    '&'        shift, and go to state 62
    '^'        shift, and go to state 63
    '['        shift, and go to state 64

    $default  reduce using rule 14 (func_body)

    func_body    go to state 94
    expression   go to state 66
    keywords     go to state 67
    types        go to state 68
    operator     go to state 69
    paranthesis  go to state 70


State 72

    8 func_param: func_param ';' list_func_param ':' types •

    $default  reduce using rule 8 (func_param)


State 73

    2 header: header PROCEDURE STRING '(' func_param ')' RETURN types • '{' func_body '}'

    '{'  shift, and go to state 95


State 74

   16 expression: PROCEDURE STRING • '(' func_param ')' RETURN types '{' func_body '}'

    '('  shift, and go to state 96


State 75

   41 keywords: IF '(' • expression ')' '{' expression '}'
   42         | IF '(' • expression ')' '{' expression '}' ELSE '{' expression '}'

    PROCEDURE  shift, and go to state 38
    VAR        shift, and go to state 39
    RETURN     shift, and go to state 40
    IF         shift, and go to state 41
    WHILE      shift, and go to state 42
    _NULL_     shift, and go to state 43
    INTPTR     shift, and go to state 21
    CHARPTR    shift, and go to state 22
    AND        shift, and go to state 44
    EQUAL      shift, and go to state 45
    EQUALMORE  shift, and go to state 46
    EQUALLESS  shift, and go to state 47
    DIFF       shift, and go to state 48
    OR         shift, and go to state 49
    BOOLEAN    shift, and go to state 23
    INTEGER    shift, and go to state 24
    CHAR       shift, and go to state 25
    STRING     shift, and go to state 26
    '('        shift, and go to state 50
    ')'        shift, and go to state 51
    '{'        shift, and go to state 52
    '-'        shift, and go to state 53
    ']'        shift, and go to state 54
    '/'        shift, and go to state 55
    '='        shift, and go to state 56
    '>'        shift, and go to state 57
    '<'        shift, and go to state 58
    '!'        shift, and go to state 59
    '+'        shift, and go to state 60
    '*'        shift, and go to state 61
    '&'        shift, and go to state 62
    '^'        shift, and go to state 63
    '['        shift, and go to state 64

    expression   go to state 97
    keywords     go to state 67
    types        go to state 68
    operator     go to state 69
    paranthesis  go to state 70


State 76

   43 keywords: WHILE '(' • expression ')' '{' expression '}'

    PROCEDURE  shift, and go to state 38
    VAR        shift, and go to state 39
    RETURN     shift, and go to state 40
    IF         shift, and go to state 41
    WHILE      shift, and go to state 42
    _NULL_     shift, and go to state 43
    INTPTR     shift, and go to state 21
    CHARPTR    shift, and go to state 22
    AND        shift, and go to state 44
    EQUAL      shift, and go to state 45
    EQUALMORE  shift, and go to state 46
    EQUALLESS  shift, and go to state 47
    DIFF       shift, and go to state 48
    OR         shift, and go to state 49
    BOOLEAN    shift, and go to state 23
    INTEGER    shift, and go to state 24
    CHAR       shift, and go to state 25
    STRING     shift, and go to state 26
    '('        shift, and go to state 50
    ')'        shift, and go to state 51
    '{'        shift, and go to state 52
    '-'        shift, and go to state 53
    ']'        shift, and go to state 54
    '/'        shift, and go to state 55
    '='        shift, and go to state 56
    '>'        shift, and go to state 57
    '<'        shift, and go to state 58
    '!'        shift, and go to state 59
    '+'        shift, and go to state 60
    '*'        shift, and go to state 61
    '&'        shift, and go to state 62
    '^'        shift, and go to state 63
    '['        shift, and go to state 64

    expression   go to state 98
    keywords     go to state 67
    types        go to state 68
    operator     go to state 69
    paranthesis  go to state 70


State 77

   74 paranthesis: '{' '}' •

    $default  reduce using rule 74 (paranthesis)


State 78

   19 expression: expression • types
   20           | expression • keywords types
   21           | expression • keywords
   22           | expression • operator types
   23           | expression • operator paranthesis
   24           | expression • operator '-'
   25           | expression • specials
   26           | expression • ':' types
   27           | expression • ',' types
   28           | expression • '|' types
   29           | expression • paranthesis types
   30           | expression • paranthesis operator
   31           | expression • paranthesis keywords
   32           | expression • paranthesis paranthesis
   33           | expression • paranthesis '-'
   34           | expression • ')' '{'
   35           | expression • ']' ';'
   36           | expression • ')' ';'
   37           | expression • ';' types
   38           | expression • ';'
   73 paranthesis: '{' expression • '}'

    VAR        shift, and go to state 39
    RETURN     shift, and go to state 40
    IF         shift, and go to state 41
    WHILE      shift, and go to state 42
    _NULL_     shift, and go to state 43
    INTPTR     shift, and go to state 21
    CHARPTR    shift, and go to state 22
    AND        shift, and go to state 44
    EQUAL      shift, and go to state 45
    EQUALMORE  shift, and go to state 46
    EQUALLESS  shift, and go to state 47
    DIFF       shift, and go to state 48
    OR         shift, and go to state 49
    BOOLEAN    shift, and go to state 23
    INTEGER    shift, and go to state 24
    CHAR       shift, and go to state 25
    STRING     shift, and go to state 26
    '('        shift, and go to state 50
    ')'        shift, and go to state 80
    '{'        shift, and go to state 52
    '}'        shift, and go to state 99
    ':'        shift, and go to state 81
    ';'        shift, and go to state 82
    ','        shift, and go to state 83
    '-'        shift, and go to state 53
    '|'        shift, and go to state 84
    ']'        shift, and go to state 85
    '/'        shift, and go to state 55
    '='        shift, and go to state 86
    '>'        shift, and go to state 57
    '<'        shift, and go to state 58
    '!'        shift, and go to state 59
    '+'        shift, and go to state 60
    '*'        shift, and go to state 61
    '&'        shift, and go to state 62
    '^'        shift, and go to state 63
    '['        shift, and go to state 64

    keywords     go to state 87
    types        go to state 88
    operator     go to state 89
    paranthesis  go to state 90
    specials     go to state 91


State 79

    4 header: PROCEDURE STRING '(' ')' RETURN types '{' func_body '}' •

    $default  reduce using rule 4 (header)


State 80

   34 expression: expression ')' • '{'
   36           | expression ')' • ';'
   71 paranthesis: ')' •

    '{'  shift, and go to state 100
    ';'  shift, and go to state 101

    '{'       [reduce using rule 71 (paranthesis)]
    $default  reduce using rule 71 (paranthesis)


State 81

   26 expression: expression ':' • types

    INTPTR   shift, and go to state 21
    CHARPTR  shift, and go to state 22
    BOOLEAN  shift, and go to state 23
    INTEGER  shift, and go to state 24
    CHAR     shift, and go to state 25
    STRING   shift, and go to state 26

    types  go to state 102


State 82

   37 expression: expression ';' • types
   38           | expression ';' •

    INTPTR   shift, and go to state 21
    CHARPTR  shift, and go to state 22
    BOOLEAN  shift, and go to state 23
    INTEGER  shift, and go to state 24
    CHAR     shift, and go to state 25
    STRING   shift, and go to state 26

    INTPTR    [reduce using rule 38 (expression)]
    CHARPTR   [reduce using rule 38 (expression)]
    BOOLEAN   [reduce using rule 38 (expression)]
    INTEGER   [reduce using rule 38 (expression)]
    CHAR      [reduce using rule 38 (expression)]
    STRING    [reduce using rule 38 (expression)]
    $default  reduce using rule 38 (expression)

    types  go to state 103


State 83

   27 expression: expression ',' • types

    INTPTR   shift, and go to state 21
    CHARPTR  shift, and go to state 22
    BOOLEAN  shift, and go to state 23
    INTEGER  shift, and go to state 24
    CHAR     shift, and go to state 25
    STRING   shift, and go to state 26

    types  go to state 104


State 84

   28 expression: expression '|' • types

    INTPTR   shift, and go to state 21
    CHARPTR  shift, and go to state 22
    BOOLEAN  shift, and go to state 23
    INTEGER  shift, and go to state 24
    CHAR     shift, and go to state 25
    STRING   shift, and go to state 26

    types  go to state 105


State 85

   35 expression: expression ']' • ';'
   72 paranthesis: ']' •

    ';'  shift, and go to state 106

    $default  reduce using rule 72 (paranthesis)


State 86

   55 operator: '=' •
   75 specials: '=' • '&'
   76         | '=' • '^'
   77         | '=' • _NULL_

    _NULL_  shift, and go to state 107
    '&'     shift, and go to state 108
    '^'     shift, and go to state 109

    $default  reduce using rule 55 (operator)


State 87

   20 expression: expression keywords • types
   21           | expression keywords •

    INTPTR   shift, and go to state 21
    CHARPTR  shift, and go to state 22
    BOOLEAN  shift, and go to state 23
    INTEGER  shift, and go to state 24
    CHAR     shift, and go to state 25
    STRING   shift, and go to state 26

    INTPTR    [reduce using rule 21 (expression)]
    CHARPTR   [reduce using rule 21 (expression)]
    BOOLEAN   [reduce using rule 21 (expression)]
    INTEGER   [reduce using rule 21 (expression)]
    CHAR      [reduce using rule 21 (expression)]
    STRING    [reduce using rule 21 (expression)]
    $default  reduce using rule 21 (expression)

    types  go to state 110


State 88

   19 expression: expression types •

    $default  reduce using rule 19 (expression)


State 89

   22 expression: expression operator • types
   23           | expression operator • paranthesis
   24           | expression operator • '-'

    INTPTR   shift, and go to state 21
    CHARPTR  shift, and go to state 22
    BOOLEAN  shift, and go to state 23
    INTEGER  shift, and go to state 24
    CHAR     shift, and go to state 25
    STRING   shift, and go to state 26
    '('      shift, and go to state 50
    ')'      shift, and go to state 51
    '{'      shift, and go to state 52
    '-'      shift, and go to state 111
    ']'      shift, and go to state 54
    '['      shift, and go to state 64

    types        go to state 112
    paranthesis  go to state 113


State 90

   29 expression: expression paranthesis • types
   30           | expression paranthesis • operator
   31           | expression paranthesis • keywords
   32           | expression paranthesis • paranthesis
   33           | expression paranthesis • '-'

    VAR        shift, and go to state 39
    RETURN     shift, and go to state 40
    IF         shift, and go to state 41
    WHILE      shift, and go to state 42
    _NULL_     shift, and go to state 43
    INTPTR     shift, and go to state 21
    CHARPTR    shift, and go to state 22
    AND        shift, and go to state 44
    EQUAL      shift, and go to state 45
    EQUALMORE  shift, and go to state 46
    EQUALLESS  shift, and go to state 47
    DIFF       shift, and go to state 48
    OR         shift, and go to state 49
    BOOLEAN    shift, and go to state 23
    INTEGER    shift, and go to state 24
    CHAR       shift, and go to state 25
    STRING     shift, and go to state 26
    '('        shift, and go to state 50
    ')'        shift, and go to state 51
    '{'        shift, and go to state 52
    '-'        shift, and go to state 114
    ']'        shift, and go to state 54
    '/'        shift, and go to state 55
    '='        shift, and go to state 56
    '>'        shift, and go to state 57
    '<'        shift, and go to state 58
    '!'        shift, and go to state 59
    '+'        shift, and go to state 60
    '*'        shift, and go to state 61
    '&'        shift, and go to state 62
    '^'        shift, and go to state 63
    '['        shift, and go to state 64

    keywords     go to state 115
    types        go to state 116
    operator     go to state 117
    paranthesis  go to state 118


State 91

   25 expression: expression specials •

    $default  reduce using rule 25 (expression)


State 92

   17 expression: keywords types •

    $default  reduce using rule 17 (expression)


State 93

   18 expression: operator types •

    $default  reduce using rule 18 (expression)


State 94

    3 header: PROCEDURE STRING '(' func_param ')' RETURN types '{' func_body • '}'
    5       | PROCEDURE STRING '(' func_param ')' RETURN types '{' func_body • '}' header

    '}'  shift, and go to state 119


State 95

    2 header: header PROCEDURE STRING '(' func_param ')' RETURN types '{' • func_body '}'
